# mavlink_protocol

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: logging.h
src/: Applicant.cpp  Applicant.h  ardupilot.cpp  ardupilot.h  common.h
src/talk/: serial.cpp  serial.h  udp.cpp  udp.h
