cmake_minimum_required(VERSION 3.10)
project(mavlink_protocol)

# Set the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# set(CMAKE_C_COMPILER "<path_to_your_compiler>")
# set(CMAKE_CXX_COMPILER "<path_to_your_compiler>")
include_directories(include)




# set(serial_demo 
# )

# target_link_libraries(serial_demo)